dit is het laatste alstublieft doe deze nakijken ik heb er echt hard aan gewerkt

--- a/teams.html
+++ b/teams.html
@@ -21,8 +21,6 @@
         <li><a href="FIA.html">FIA</a></li>
         <li><a class="active" href="teams.html">teams en coureurs</a></li>
         <li><a href="geschiedenis.html">De geschiedenis</a></li>
-        <li><a href="Weetjes.html">Weetjes over F1</a></li>
-
       </ul>
     </nav>
 
@@ -31,8 +29,7 @@
       <div id="redbullracing">
         <h3 class="redbull">Red Bull Racing</h3>
 
-        <p id="redbull1">Red Bull Racing is een Oostenrijks Formule 1-team, gevestigd in Groot-Brittannië en actief
-          sinds 2005. Christian Horner is teambaas sinds de oprichting in 2005. Het team reed onder een Britse licentie
+        <p id="redbull1">Red Bull Racing is een Oostenrijks Formule 1-team, gevestigd in Groot-Brittannië en actief  sinds 2005. Christian Horner is teambaas sinds de oprichting in 2005. Het team reed onder een Britse licentie
           in 2005 en 2006 en heeft sinds 2007 een Oostenrijkse licentie.</p>
 
         <p id="redbull2"><strong>Opgericht:</strong> 2004, Verenigd Koninkrijk<br>
@@ -367,6 +364,90 @@
           <strong>Wereld Kampioen:</strong> 0<br>
           <strong>Aantal polepositions:</strong> 0<br>
           <strong>Geboortedatum:</strong> 11/05/2000
+        </p>
+      </div>
+
+       <div id="haas-f1">
+        <h3 class="haas">Haas F1 Team</h3>
+
+        <p id="haas1">Het Haas F1 Team is een Amerikaans Formule 1-team dat actief is vanaf 2016. Het team is opgericht in 2014 door Gene Haas, teameigenaar van het NASCAR-team Stewart Haas Racing.Aan het eind van het seizoen 2022 werd Mick Schumacher verplaatst voor Nico Hulkenberg.</p>
+
+         <p id="haas2"><strong>Opgericht:</strong> 2014, Veringde Staten<br>
+          <strong>Oprichter:</strong>  Gene Haas<br>
+          <strong>CTO:</strong> Simone Resta<br>
+          <strong>Aantal F1-races:</strong> 144 (144 starts)<br>
+          <strong>Aantal podia:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0
+        </p>
+
+        <img id="haas-image1" src="afbeeldingen/haas-f1-logo-62ef696de2b17.jpg" alt="Haas f1 image">
+
+        <h4 id="kevin">Kevin Magnussen</h4>
+
+        <p id="haas3">
+          <strong>team:</strong> Haas F1 Team<br>
+          <strong>land:</strong> Denenmarken<br>
+          <strong>Aantal F1-races:</strong> 142<br>
+          <strong>Aantal podia:</strong> 1<br>
+          <strong>punten:</strong> 183<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 05/10/1992 
+        </p>
+
+        <h4 id="mick">Mick Schumacher</h4>
+
+        <p id="haas4">
+          <strong>team:</strong> Haas F1 Team<br>
+          <strong>land:</strong> Duitsland, Zwitserland<br>
+          <strong>Aantal F1-races:</strong> 43<br>
+          <strong>Aantal podia:</strong> 0<br>
+          <strong>punten:</strong> 	12<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 11/05/2000
+        </p>
+      </div>
+
+       <div id="williams-f1">
+        <h3 class="williams">Williams Racing</h3>
+
+        <p id="williams1">Williams F1 is een Brits Formule 1-team, en een van de succesvolste teams ooit. Het werd in 1977 opgericht door Frank Williams en Patrick Head. Het team behaalde zijn grootste successen in de jaren tachtig en negentig.</p>
+
+         <p id="williams2"><strong>Opgericht:</strong> 1977, Verenigd Koninkrijk<br>
+          <strong>Oprichter:</strong>	Frank Williams, Patrick Head<br>
+          <strong>CTO:</strong> n.n.b.<br>
+          <strong>Aantal F1-races:</strong> 792 (788 starts)<br>
+          <strong>Aantal podia:</strong> 313<br>
+          <strong>Aantal polepositions:</strong> 128
+        </p>
+
+        <img id="williams-image1" src="afbeeldingen/ff454bb2b4adb541b66477adcb49088f8de0fb4a-2400x2400.webp" alt="williams image">
+
+        <h4 id="albon">Alexander Albon</h4>
+
+        <p id="williams3">
+          <strong>team:</strong> Williams Racing<br>
+          <strong>land:</strong> Thailand<br>
+          <strong>Aantal F1-races:</strong> 59<br>
+          <strong>Aantal podia:</strong> 2<br>
+          <strong>punten:</strong> 201<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 23/03/1996 
+        </p>
+
+        <h4 id="latifi">Nicholas Latifi</h4>
+
+        <p id="williams4">
+          <strong>team:</strong> Williams Racing<br>
+          <strong>land:</strong> Frankrijk<br>
+          <strong>Aantal F1-races:</strong> 61<br>
+          <strong>Aantal podia:</strong> 0<br>
+          <strong>punten:</strong> 9<br>
+          <strong>Wereld Kampioen:</strong> 0<br>
+          <strong>Aantal polepositions:</strong> 0<br>
+          <strong>Geboortedatum:</strong> 29/06/1995
         </p>
       </div>
       
